<resources>
    <string name="viewfinderview_g_cancel_text">Focus the camera on the QR code to scan automatically</string>
    <string name="captureactivity_a1_camera_alarm_photo">Qr code can not be identified</string>
    <string name="captureactivity_xianc">Album</string>
    <string name="app_name">UBell</string>
    <string name="device">Device</string>
    <string name="finish">OK</string>
    <string name="decodehandler_show_toat_buzhi">The camera does not support QR code scanning</string>
    <string name="main_action_settings">Settings</string>
    <string name="fragment_liveviewactivity_publiccameraactivity_setupadddeviceactivity_state_connected">Online</string>
    <string name="mycamerafragment_state_connecting">Connecting...</string>
    <string name="fragment_liveviewactivity_mainactivity_state_disconnected">Offline</string>
    <string name="fragment_fast_search">Setup a new camera</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="advancesettingactivity_none">None</string>
    <string name="close">Close</string>
    <string name="eventlistactivity_tips_deldownload">delete</string>
    <string name="eventlistactivity_downloading">Is downloading now...</string>
    <string name="fragment_playbackactivity_menu_title">UBell</string>
    <string name="page10_dialog_ManagCustomtime">Set time automatically</string>
    <string name="dialog_ManagCustomtimezone">Daylight savings time</string>
    <string name="addvancesettingactivity_Time_adjust">Time adjusted</string>
    <string name="vibrate_model">Vibrate</string>
    <string name="mainfragment_adddeviceactivity_u_tips_scan_qrcode">Scan QR code</string>
    <string name="device_video_name">Recording history</string>
    <string name="menu_soundsrc">Sound source</string>
    <string name="empty">Empty</string>
    <string name="camera">Camera</string>
    <string name="menu_setting">Menu Setting</string>
    <string name="photogridactivity_menu_delete">Delete</string>
    <string name="mycamearfragment_photogridactivity_title_operation">Operation</string>
    <string name="share">Share</string>
    <string name="rec">REC</string>
    <string name="menufragment_prompt">Sign out?</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="page32_text_alarm">Alarm</string>
    <string name="PhotoGridActivity_sdcard_not_mounted">Insert SD card</string>
    <string name="page1_text_register">New Account</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="login_savepassword">Remember me</string>
    <string name="page1_repassword">Confirm Password </string>
    <string name="page28_text_login">Log in</string>
    <string name="page28_please_input_username_and_password">Email address and password is required</string>
    <string name="page1_fail_to_register">Register failed</string>
    <string name="Regsiter_valid_code">Verification code</string>
    <string name="page1_success_to_register">Sign up succeeded</string>
    <string name="page1_account_null">Account is required</string>
    <string name="page1_pass_null">Please enter a password</string>
    <string name="page1_repass_null">Please confirm your password</string>
    <string name="page1_repasserr">Both passwords are not same</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="Monitor_doubleclick_quitfullscreen">Double click to return to the original size.</string>
    <string name="page27_menu_my_camera">Live View</string>
    <string name="page27_PublicCameraFragment_PublicCameraActivity_menu_public_camera">Public Camera</string>
    <string name="page27_menu_photo">Albums</string>
    <string name="page27_menu_video">Records</string>
    <string name="page27_menu_event">Events</string>
    <string name="page27_change_ipc">Change device Settings</string>
    <string name="page27_menu_user">Change App Settings</string>
    <string name="page27_menu_cloud_photo">Cloud Photos</string>
    <string name="page27_menu_cloud_video">Cloud Videos</string>
    <string name="page27_menu_quit">Quit</string>
    <string name="page29_exit_app_warn">Tap again to quit</string>
    <string name="page35_camera_add">Add device</string>
    <string name="page2_txtUID">ID</string>
    <string name="page3_txtName">Name</string>
    <string name="page4_txtLocation">Location</string>
    <string name="page25_txtSecurityCode">Password</string>
    <string name="page13_title_add_device">Configure device Wi-Fi</string>
    <string name="page5_tips_warning">Warning</string>
    <string name="page6_tips_add_camera_ok">Add successful</string>
    <string name="page6_tips_add_camera_duplicated">Device already exists</string>
    <string name="page6_tips_add_camera_facedirection">Please select a install direction</string>
    <string name="page7_tips_camera_name">Please enter, scan, or search for device ID</string>
    <string name="page7_tips_dev_uid">Please enter device\'s ID number</string>
    <string name="page13_tips_dev_ssid_key">Username and password should be less than 50 charaters</string>
    <string name="page7_tips_dev_uid_character">Device ID must be 20 characters long</string>
    <string name="page7_tips_dev_security_code">Please create a password</string>
    <string name="page6_tips_add_camera_duplicated_replace">Device exist, should override?</string>
    <string name="page6_failed_to_add_device">Add failed</string>
    <string name="page6_camera_added_by_other_user">The device was added by other user</string>
    <string name="page27_page19_PublicCameraFragment_camera_list_add_device">Add Device</string>
    <string name="page26_camer_online">Online</string>
    <string name="page26_camer_offline">Offline</string>
    <string name="page8_txtOnlineNumber"> " "</string>
    <string name="page8_txtFrameRatio">Lost rate </string>
    <string name="page8_txtQuality">Condition </string>
    <string name="page24_loading">Loading...</string>
    <string name="page8_tips_snapshot_ok">Snapshot captured</string>
    <string name="page8_page30_tips_no_sdcard">Mount SD card</string>
    <string name="page9_failed_to_view_image">Failed to view the image</string>
    <string name="page9_text_photo_view">Snapshots</string>
    <string name="EventSearchActivity_event_search">Search</string>
    <string name="EventSearchActivity_endtime_must_less_than_starttime">Endtime must less than starttime!</string>
    <string name="page21_tips_play_record_timeout">Play record timeout!</string>
    <string name="page21_tips_play_record_failed">Play record failed!</string>
    <string name="page8_tips_play_record_end">End!</string>
    <string name="page10_failed_to_update_device">failed to edit device</string>
    <string name="page10_success_to_update_device">success to edit device</string>
    <string name="page10_failed_to_update_device_name">failed to edit device\'s name</string>
    <string name="page10_success_to_update_device_name">success to edit device\'s name</string>
    <string name="about">About</string>
    <string name="page27_sure_to_logout">Are you sure to sign out?</string>
    <string name="page31_tips_wifi_connecting">Connecting to device</string>
    <string name="page10_fail_to_connect_camera">Connect failed</string>
    <string name="AboutActivity_txtCopyRightInfo">Copyright 2015 All rights reserved.</string>
    <string name="page30_share_device_qr_save">Save to Album</string>
    <string name="page26_lstClickToAddCamera">Add a device</string>
    <string name="page23_camerainfo">Please enter the device\'s information</string>
    <string name="page23_camerainstall_direction">Please select a direction of device install</string>
    <string name="page23_camerainstall">Device install</string>
    <string name="page23_camerainstall_putmode">Put Mode</string>
    <string name="page23_camerainstall_faceho">Face Horizontal</string>
    <string name="page23_camerainstall_facedown">Face Down</string>
    <string name="page23_camerainstall_faceUp">Face Up</string>
    <string name="page23_txtaccount">Username</string>
    <string name="finish_btn">Finish</string>
    <string name="page10_power">Power frequency</string>
    <string name="page10_txtSecuritySetting">Password</string>
    <string name="page10_imgDesc_SplitLine">SplitLine</string>
    <string name="page10_btnModifySecurityCode">Change password</string>
    <string name="page10_txtRecordSetting">Recording mode</string>
    <string name="page10_alarm_putmode">Put Mode</string>
    <string name="page10_FaceDown">Face Down</string>
    <string name="page10_FaceUp">Face Up</string>
    <string name="page10_FaceFront">Face Front</string>
    <string name="page10_txtPIRSetting">PIR Settings</string>
    <string name="page10_txtPIRSetStatus">PIR Status</string>
    <string name="page10_txtosdSetting">Timestamp</string>
    <string name="page10_txtosdSetStatus">Timestamp</string>
    <string name="page10_txtputmode">Put Mode</string>
    <string name="page10_txtVideoSetting">Video</string>
    <string name="page10_txtVideoQuality">Video Quality</string>
    <string name="page10_txtVideoFlip">Orientation</string>
    <string name="page10_txtEnvironment">Environment</string>
    <string name="page10_txtWiFiSetting">Wi-Fi Settings</string>
    <string name="page10_txtWiFiSSID">SSID</string>
    <string name="page10_txtWiFiPasssword">Wi-Fi password</string>
    <string name="page10_txtEventSetting">Motion detection</string>
    <string name="page10_txtVolumeSetting">Volume</string>
    <string name="page10_btnVolumeSetting">Device speaker and mic</string>
    <string name="page10_txtMotionDetectionSetting">Alarm sensitivity</string>
    <string name="page10_txtSPVolumeSetting">Device Speaker Volume</string>
    <string name="page10_txtMICVolumeSetting">Device Mic Volume</string>
    <string name="page10_txtEventNotification">Event Notification</string>
    <string name="page10_txtRecordingMode">Recording mode</string>
    <string name="page10_txtDeviceInfo">Device information</string>
    <string name="page10_txtDeviceModel">Model</string>
    <string name="page10_txtVenderName">Vendor</string>
    <string name="page10_txtDeviceVersion">Device firmware version</string>
    <string name="page10_txtStorageTotalSize">Total space</string>
    <string name="page10_txtStorageFreeSize">Available space</string>
    <string name="page10_btnSDCard">SD card</string>
    <string name="page26_txtFormatSDCardTitle">Unable to identify the SD card</string>
    <string name="page26_txtFormatSDCardDesc">You must format SD card to continue to record</string>
    <string name="page26_chbShowTipsFormatSDCard">The SD card was not recognized</string>
    <string name="page26_btnFormat">Format SD card</string>
    <string name="page10_txtWiFiSignal">Signal strength</string>
    <string name="page10_txtWiFiSecurity">Security options</string>
    <string name="page10_txtWirelessPassword">Password</string>
    <string name="page10_chbShowHiddenWiFiPassword">Show the password</string>
    <string name="page10_page19_txtOldPassword">Old Password</string>
    <string name="page10_txtNewPassword">Enter Password</string>
    <string name="page10_page19_txtConfirmPassword">Confirm Password</string>
    <string name="page10_cancel_btn">Cancel</string>
    <string name="page33_txtNoPhotos">Empty</string>
    <string name="page33_txtNoPhotosDetail">None</string>
    <string name="page33_imgDesc_NoPhotos">No Photos</string>
    <string name="page11__p6_fail_note">Setup failed</string>
    <string name="page11__close_btn">Close</string>
    <string name="page11__retry_btn">Retry</string>
    <string name="page19_txtWifiPassword">Wi-Fi Key</string>
    <string name="cloud_delete_all">delete all videos </string>
    <string name="cloud_delete_day">delete the videos of the day</string>
</resources>