<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15.0dip"
        android:gravity="center"
        android:text="@string/page26_txtFormatSDCardTitle"
        android:textColor="#ff000000"
        android:textSize="14.0sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:gravity="center"
        android:padding="5.0dip"
        android:text="@string/page26_txtFormatSDCardDesc"
        android:textColor="#ff333333" />

    <CheckBox
        android:id="@id/chbShowTipsFormatSDCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8.0dip"
        android:text="@string/page26_chbShowTipsFormatSDCard"
        android:textColor="#ff666666" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:background="#ffffffff"
        android:gravity="center"
        android:orientation="horizontal" >
"

        <Button
            android:id="@id/btnFormatSDCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:text="@string/page26_btnFormat" />

        <Button
            android:id="@id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:text="@string/close" />
    </LinearLayout>

</LinearLayout>