<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center" >

    <ImageView
        android:id="@id/imgNoPhotos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:contentDescription="@string/page33_imgDesc_NoPhotos"
        android:src="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@id/txtNoPhotos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imgNoPhotos"
        android:layout_toRightOf="@id/imgNoPhotos"
        android:text="@string/page33_txtNoPhotos"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="24.0sp" />

    <TextView
        android:id="@id/txtNoPhotosDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_below="@id/txtNoPhotos"
        android:layout_marginTop="15.0dip"
        android:text="@string/page33_txtNoPhotosDetail" />

</RelativeLayout>