<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5.0dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15.0dip"
            android:orientation="horizontal" >

            <Spinner
                android:id="@id/spinWiFiSSID"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5.0dip"
                android:text="@string/page10_txtWiFiSignal"
                android:textColor="#ff666666" />

            <TextView
                android:id="@id/txtWiFiSignal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff000000"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5.0dip"
                android:text="@string/page10_txtWiFiSecurity"
                android:textColor="#ff666666" />

            <TextView
                android:id="@id/txtWiFiSecurity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff000000"
                android:textStyle="bold" />
"
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dip"
            android:text="@string/page10_txtWirelessPassword"
            android:textColor="#ff666666" />

        <EditText
            android:id="@id/edtWiFiPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/color_cursor"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <CheckBox
            android:id="@id/chbShowHiddenPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/page10_chbShowHiddenWiFiPassword"
            android:textColor="#ff666666" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffdddddd"
        android:padding="3.0dip" >

        <Button
            android:id="@id/btnOK"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/ok" />

        <Button
            android:id="@id/btnCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>