<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_camera_setting"
    android:orientation="vertical" >





    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >


        <TextView
            android:id="@+id/all_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:gravity="center"
            android:text="@string/cloud_delete_all"
            android:textColor="#ff0000"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/day_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="21dp"
            android:gravity="center"
            android:text="@string/cloud_delete_day"
            android:textColor="#ff0000"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="21dp"
            android:layout_marginBottom="21dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/color_less_blue"
            android:textSize="16dp" />


    </LinearLayout>

</LinearLayout>