<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_weight="1.0"
        android:minWidth="320.0dip"
        android:orientation="vertical"
        android:padding="10.0dip" >

        <EditText
            android:id="@+id/login_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textCursorDrawable="@drawable/color_cursor"
            android:layout_marginRight="5dp"
            android:background="@drawable/edit_bg"
            android:ems="10"
            android:hint="@string/username"
            android:imeOptions="actionNext|flagNoExtractUi"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:scrollHorizontally="true" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textCursorDrawable="@drawable/color_cursor"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_bg"
            android:ems="10"
            android:hint="@string/password"
            android:imeOptions="actionDone|flagNoExtractUi"
            android:inputType="textPassword"
            android:maxLines="1"
             android:maxLength="12"
            android:scrollHorizontally="true" />
        <CheckBox
            android:id="@+id/savepwd"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/login_savepassword" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/registerButton"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1.0"
                android:background="@drawable/register_bg"
                android:text="@string/page1_text_register"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1.0"
                android:background="@drawable/login_bg"
                android:text="@string/page28_text_login"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>