<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_margin="5.0dip" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3.0"
                android:text="@string/page10_page19_txtOldPassword"
                android:textColor="#ff000000" />

            <EditText
                android:id="@id/edtOldPassword"
                android:textCursorDrawable="@drawable/color_cursor"
                android:layout_width="150dp"
                android:paddingLeft="10dp"
                android:layout_height="wrap_content"
                android:maxLength="12"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3.0"
                android:text="@string/page10_txtNewPassword"
                android:textColor="#ff000000" />

            <EditText
                android:id="@id/edtNewPassword"
                android:layout_width="150dp"
                android:paddingLeft="10dp"
                 android:maxLength="12"
                android:textCursorDrawable="@drawable/color_cursor"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3.0"
                android:singleLine="true"
                android:text="@string/page10_page19_txtConfirmPassword"
                android:textColor="#ff000000" />

            <EditText
                android:id="@id/edtConfirmPassword"
                android:layout_width="150dp"
                android:paddingLeft="10dp"
                 android:maxLength="12"
                android:textCursorDrawable="@drawable/color_cursor"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffdddddd"
        android:padding="3.0dip" >

        <Button
            android:id="@id/btnOK"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/ok" />

        <Button
            android:id="@id/btnCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/page10_cancel_btn" />
    </LinearLayout>

</LinearLayout>