<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/detail_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/page11__p6_fail_note"

            android:textSize="19sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/reset_1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:paddingTop="100dp"
         >

        <Button
            android:id="@+id/btnNo"
            android:layout_width="180dp"
            android:layout_height="wrap_content"

            android:background="@drawable/setup_camera"
            android:text="@string/page11__close_btn"
            android:textColor="#ffffff"
             />

        <Button
            android:id="@+id/btnYes"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/setup_camera"
            android:text="@string/page11__retry_btn"
            android:visibility="gone"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>